# deriv-prototype

./: .gitignore  README.md  package.json
apps/web/: components.json  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx
apps/web/app/api/v1/daily-ops/: route.ts
apps/web/app/api/v1/events/: route.ts
apps/web/app/daily-ops/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/exceptions/: page.tsx
apps/web/app/inbox/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/monthly-close/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/app/runs/new/: page.tsx
apps/web/app/settings/rules/: page.tsx
apps/web/components/recon/: ai-trace-panel.tsx  chat-widget.tsx  daily-ops-board.tsx  monthly-close-board.tsx  monthly-submission-board.tsx  page-shell.tsx  top-nav.tsx
apps/web/components/ui/: combobox.tsx  dropdown-menu.tsx  select.tsx
apps/web/lib/: server-api.ts  types.ts
infra/: docker-compose.yml
infra/pocketbase/: README.md  collections.json
sample_data/scenario3/: scenario3_internal_10.csv  scenario3_psp_10.csv  scenario3_psp_10.xlsx
services/agno_api/: README.md  pyproject.toml
services/agno_api/app/: ai.py  auto_download.py  config.py  formatting.py  main.py  reconciliation.py  rules.py  schemas.py  service.py  storage.py
services/agno_api/tests/: test_chat_context.py  test_chat_smalltalk.py  test_daily_monthly_split.py  test_monthly_submission.py  test_reconciliation.py  test_transaction_snapshot.py
services/agno_worker/: pyproject.toml
services/agno_worker/app/: worker.py
(+31 files in other folders)
