[project]
name = "agno-api"
version = "0.1.0"
description = "Reconciliation API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.0",
  "httpx>=0.28.1",
  "pandas>=2.3.0",
  "openpyxl>=3.1.5",
  "pypdf>=5.9.0",
  "redis>=6.4.0",
  "rq>=2.5.0",
  "python-dotenv>=1.1.1",
  "agno>=1.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
